--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,30 @@ body{
     background-color: white;
     font-family: "Hanken Grotesk";
     font-weight: 500;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+main{
+    grid-column: 1/3;
+    display: block;
+    margin: 0 auto;
+    padding-top: calc(11.5vw  - 7vh);
+}
+article{
+    display: flex;
+    flex-wrap: wrap;
+}
+article section{
+    background-color: red;
+    flex: 1 1 12em;
+    /* max-width: 15rem;  */
+    box-sizing: border-box; /* Asegura que el padding y el border no afecten el tamaño del elemento */
+    padding: 10px;
 }
 
 
 
-
-
-
-.attribution { font-size: 11px; text-align: center; }
+.attribution { grid-column: 1/3; font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
