--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body{
     box-sizing: border-box;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    font-size: 18px;
 }
 
 main{
@@ -27,16 +28,47 @@ article section{
 }
 .results{
     box-sizing: border-box;
-    padding: 1em;
-    border-radius: 0 0 2em 2em;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 0 0 2rem 2rem;
     background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
+    color: hsla(0, 0%, 100%, 0.5);
+    text-align: center;
 
-    -webkit-border-radius: 0 0 2em 2em;
-    -moz-border-radius: 0 0 2em 2em;
-    -ms-border-radius: 0 0 2em 2em;
-    -o-border-radius: 0 0 2em 2em;
+    -webkit-border-radius: 0 0 2rem 2rem;
+    -moz-border-radius: 0 0 2rem 2rem;
+    -ms-border-radius: 0 0 2rem 2rem;
+    -o-border-radius: 0 0 2rem 2rem;
 }
+.mainscore{
+    height: 120px;
+    width: 120px;
+    background: linear-gradient(hsla(256, 72%, 46%, 1),hsla(241, 72%, 46%, 0));
+    border-radius: 50%;
 
-
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+.mainscore h2{
+    color: white;
+    font-size: 3em;
+    margin:1rem 0 0 0;
+    display: inline-block;
+}
+.mainscore p{
+    margin: 0;
+    font-size: .75em;
+}
+#a{
+    margin: 0;
+    color: hsla(0, 0%, 100%, 100%);
+}
+.results p{
+    margin: 0.5em 0;
+}
 .attribution { grid-column: 1/3; font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
