--- a/css/styles.css
+++ b/css/styles.css
@@ -20,10 +20,8 @@ article{
     flex-wrap: wrap;
 }
 article section{
-    background-color: red;
     flex: 1 1 12em;
-    /* max-width: 15rem;  */
-    box-sizing: border-box; /* Asegura que el padding y el border no afecten el tamaño del elemento */
+    box-sizing: border-box;
     padding: 10px;
 }
 .results{
@@ -69,6 +67,29 @@ article section{
 }
 .results p{
     margin: 0.5em 0;
+}
+.summary :nth-child(n){
+    /* background-color: red; */
+}
+.summary h2{
+    font-size: 1.5rem;
+}
+.summary ul{
+    list-style-type: none;
+    padding: 0;
+}
+.summary ul li{
+    background-color: lightgreen;
+    margin-bottom: 1rem;
+}
+.summary ul li div{
+    display: inline-block;
+}
+.summary ul li div :nth-child(n){
+    display: inline-block;
+
+}
+.summary ul li div .icon{
 }
 .attribution { grid-column: 1/3; font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
