--- a/css/styles.css
+++ b/css/styles.css
@@ -65,11 +65,12 @@ article section{
     margin: 0;
     color: hsla(0, 0%, 100%, 100%);
 }
-.results p{
-    margin: 0.5em 0;
+.results >p{
+    margin: 0.5em 0 1.5rem;
+    max-width: 18rem;
 }
-.summary :nth-child(n){
-    /* background-color: red; */
+.summary{
+    padding: 2rem;
 }
 .summary h2{
     font-size: 1.5rem;
@@ -84,25 +85,26 @@ article section{
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
+
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
 }
 .summary ul> :nth-child(1){
-    background-color: hsla(0, 100%, 67%, 25%);
+    background-color: hsla(0, 100%, 67%, 15%);
     color:  hsl(0, 100%, 67%);
 }
 .summary ul> :nth-child(2){
-    background-color: hsla(39, 100%, 56%, 25%);
+    background-color: hsla(39, 100%, 56%, 15%);
     color: hsl(39, 100%, 56%);
 }
 .summary ul> :nth-child(3){
-    background-color: hsla(166, 100%, 37%, 25%);
+    background-color: hsla(166, 100%, 37%, 15%);
     color: hsl(166, 100%, 37%);
 }
 .summary ul> :nth-child(4){
-    background-color: hsl(234, 85%, 45%, 25%);
+    background-color: hsl(234, 85%, 45%, 15%);
     color:  hsl(234, 85%, 45%);
 }
 .score{
@@ -118,14 +120,18 @@ article section{
     color: hsla(224, 30%, 27%, 50%);
 }
 .summary ul li div{
-    display: inline-block;
+    display: flex;
 }
 .summary ul li div :nth-child(n){
     display: inline-block;
     margin: 0;
 }
 .summary ul li div .icon{
-
+    display: inline-flex;
+    align-items: center;
+}
+.summary div h3{
+    padding-left: 10px;
 }
 .attribution { grid-column: 1/3; font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
