--- a/css/styles.css
+++ b/css/styles.css
@@ -18,34 +18,37 @@ main{
 article{
     display: flex;
     flex-wrap: wrap;
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
 }
 article section{
-    flex: 1 1 12em;
+    flex: 1 1 100px;
     box-sizing: border-box;
     padding: 10px;
 }
 .results{
     box-sizing: border-box;
+    border-radius: 2rem;
     padding: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 0 0 2rem 2rem;
     background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
     color: hsla(0, 0%, 100%, 0.5);
     text-align: center;
-
-    -webkit-border-radius: 0 0 2rem 2rem;
-    -moz-border-radius: 0 0 2rem 2rem;
-    -ms-border-radius: 0 0 2rem 2rem;
-    -o-border-radius: 0 0 2rem 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
 }
 .mainscore{
     height: 120px;
     width: 120px;
     background: linear-gradient(hsla(256, 72%, 46%, 1),hsla(241, 72%, 46%, 0));
     border-radius: 50%;
-
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
@@ -55,7 +58,7 @@ article section{
     color: white;
     font-size: 3em;
     margin:1rem 0 0 0;
-    display: inline-block;
+    display: block;
 }
 .mainscore p{
     margin: 0;
@@ -71,6 +74,12 @@ article section{
 }
 .summary{
     padding: 2rem;
+    box-shadow: 10px 10px 20px hsla(241, 100%, 89%);
+    border-radius: 0 2em 2rem 0;
+    -webkit-border-radius: 0 2em 2rem 0;
+    -moz-border-radius: 0 2em 2rem 0;
+    -ms-border-radius: 0 2em 2rem 0;
+    -o-border-radius: 0 2em 2rem 0;
 }
 .summary h2{
     font-size: 1.5rem;
@@ -85,7 +94,7 @@ article section{
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
-
+    
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
@@ -132,6 +141,24 @@ article section{
 }
 .summary div h3{
     padding-left: 10px;
+}
+.continue{
+    width: 100%;
+    height: 3rem;
+    border-radius: 5rem;
+    border:none;
+    background-color: hsl(224, 30%, 27%);
+    color: white;
+    font-size: 1rem;
+    font-weight: 700;
+
+    -webkit-border-radius: 5rem;
+    -moz-border-radius: 5rem;
+    -ms-border-radius: 5rem;
+    -o-border-radius: 5rem;
+}
+.continue:hover{
+    background-color: hsl(224, 30%, 20%);
 }
 .attribution { grid-column: 1/3; font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
